# strands-env

./: .gitignore  .license-header.txt  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/commands/: create-release.md  run-integration-tests.md
docs/: evaluation.md  rl-training.md
examples/: bedrock_judge_demo.py  calculator_demo.py  web_search_demo.py
examples/eval/aime/: README.md  chat_env.py  code_sandbox_env.py
examples/eval/aime_code/: README.md
examples/eval/browsecomp/: README.md  chat_env.py  openseeker_env.py  web_search_env.py
examples/eval/frames/: README.md  chat_env.py
examples/eval/gpqa/: README.md  chat_env.py  code_sandbox_env.py
examples/eval/hle_verified/: README.md  chat_env.py
examples/eval/hmmt/: README.md  chat_env.py  code_sandbox_env.py
examples/eval/ifeval/: README.md  chat_env.py
examples/eval/mcp_atlas/: README.md  env.py
examples/eval/sealqa/: README.md  chat_env.py
examples/eval/simple_math/: README.md  calculator_env.py  simple_math_evaluator.py
examples/eval/simpleqa_verified/: README.md  chat_env.py
examples/eval/swebench/: swebench_env.py
examples/eval/terminal_bench/: README.md  terminal_bench_eks_env.py  terminal_bench_env.py
examples/slime/retool/: README.md  generate_with_code_sandbox.py  run_retool_qwen3_8b.sh
src/strands_env/: __init__.py
src/strands_env/cli/: __init__.py  eval.py  models.py
src/strands_env/core/: __init__.py  environment.py  models.py  types.py
src/strands_env/environments/: __init__.py
src/strands_env/environments/agent_world_model/: README.md  __init__.py  reward.py  tool.py
src/strands_env/environments/agentworldmodel/: README.md  __init__.py  env.py  requirements.txt  reward.py  server.py  system_prompt.md
src/strands_env/environments/calculator/: __init__.py  env.py
src/strands_env/eval/: __init__.py  evaluator.py  metrics.py  registry.py
src/strands_env/rewards/: __init__.py  code_test_case_reward.py  llm_judge_reward.py  math_verify_reward.py
src/strands_env/tools/: __init__.py  code_interpreter.py  mcp_tool.py  openseeker_visit.py  web_scraper.py  web_search.py
src/strands_env/utils/: __init__.py  aws.py  decorators.py  loader.py  rate_limiter.py  ray.py  sglang.py  slime.py
tests/: conftest.py
tests/integration/: conftest.py  test_calculator_env.py  test_code_sandbox.py  test_math_env.py  test_terminal_bench.py  test_web_search.py
tests/unit/: conftest.py  test_environment.py
tests/unit/core/: conftest.py  test_environment.py  test_models.py  test_types.py
tests/unit/eval/: __init__.py  test_evaluator.py  test_registry.py
tests/unit/rewards/: __init__.py  test_llm_judge_reward.py  test_math_verify_reward.py
tests/unit/tools/: test_code_interpreter.py  test_openseeker_visit.py  test_web_scraper.py  test_web_search.py
tests/unit/utils/: test_utils.py
(+46 files in other folders)
