[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "strands-env"
dynamic = ["version"]
description = "Standardizing environment infrastructure with Strands Agents — step, observe, reward."
authors = [{name = "Yuan He", email = "yuanhe.cs.ai@gmail.com"}]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "strands-sglang>=0.3.7",
    "strands-agents-tools>=0.2.0",
    "openai",
    "datasets",
    "math-verify>=0.8.0",
    "click>=8.0.0",
    "tqdm>=4.0.0",
    "tiktoken>=0.5.0",
    "python-dotenv",
    "aiolimiter>=1.1.0",
]

[project.scripts]
strands-env = "strands_env.cli:main"

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0",
    "pytest-timeout>=2.0.0",
    # Linting & Build
    "pre-commit",
    "ruff>=0.6.0",
    "twine>=4.0.0",
    "build>=0.10.0",
    # Type checking
    "mypy>=1.10.0",
]
litellm = ["litellm"]
terminal-bench = [
    "harbor>=0.1.43; python_version>='3.12'", 
    "harbor-aws==0.2.1; python_version>='3.12'",
    "awscli; python_version>='3.12'"
]
ifeval = ["lm_eval[ifeval]>=0.4.11"]
agent-world-model = ["agent-world-model==0.1.0"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/strands_env"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 90

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unreachable = true
ignore_missing_imports = true

[tool.uv]
conflicts = [
    [
        { extra = "litellm" },
        { extra = "terminal-bench" },
    ],
]

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "D",   # pydocstyle
    "E",   # pycodestyle
    "F",   # pyflakes
    "G",   # flake8-logging-format
    "I",   # isort
    "LOG", # logging
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"!src/**/*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
